Fix word-wrap and overflow

--- a/client/static/css/room.sass
+++ b/client/static/css/room.sass
@@ -50,11 +50,13 @@ body, h1, h2, h3, h4, h5, h6
 #chat
   background-color: #FAFAFA
   height: 275px
+  overflow-y: scroll
   padding: 10px
 
   p
     font-size: 0.9em
     margin: 0
+    word-wrap: break-word
 
     .username
       margin-right: 3px
